--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Facebook</title>
+	<title>CV</title>
 	<meta charset="utf-8">
 	<!-- IE Meta -->
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
