--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CV</title>
+	<title>Facebook</title>
 	<meta charset="utf-8">
 	<!-- IE Meta -->
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
         }
         .details{
             font-family: Verdana, Geneva, sans-serif;
-            font-size: 12px;
+            font-size: 10px;
             text-align: left;
         }
     	.heading{
@@ -128,6 +128,7 @@
                     </li>
                     <li>Implementation of 8-bit pipelined RISC processor using Verilog</li>
                     <li>Implementation of a MIPS architecture using Verilog</li>
+                    <li>Implementation of Advanced Encryption Standard (AES) algorithm using Verilog</li>
                     <li>Designing a firefighting robot control circuit using logic gates</li>
                 </ul>
             </div>
