--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         	   Educational Background
 	        </div>
 	        <div class="content col-xs-12 col-sm-9">
-	           Third year, Communication and Electronics department, Faculty of Engineering Alexandria University, class 2018, grade: Good.
+	           Third year, Communication and Electronics department, Faculty of Engineering Alexandria University, class 2018, grade: Good (69.5%).
 	        </div>
         </div>
         <hr style="border-top: #e0dada solid 2px;">
